fix save assessment button high contrast styling

--- a/src/common/components/controls/insights-command-button.scss
+++ b/src/common/components/controls/insights-command-button.scss
@@ -1,8 +1,9 @@
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 @import '../../../common/styles/colors.scss';
+@import '../../../common/styles/common.scss';
 
-button.insights-command-button {
+.insights-command-button {
     .command-bar-button-icon {
         line-height: 16px;
     }
@@ -18,6 +19,24 @@ button.insights-command-button {
     &:active:not(:disabled) {
         .command-bar-button-icon {
             color: $primary-text;
+        }
+    }
+}
+
+// high contrast overrides to make a.insights-command-button
+// match button.insights-command-button
+a.insights-command-button {
+    @media screen and (forced-colors: active) {
+        color: buttontext;
+
+        .command-bar-button-icon {
+            color: buttontext;
+        }
+
+        &:hover {
+            .command-bar-button-icon {
+                color: buttontext;
+            }
         }
     }
 }
